@@ -2,38 +2,25 @@ package com.androsa.undeco.data;
 
 import com.androsa.ornamental.data.provider.OrnamentLootTableProvider;
 import com.androsa.undeco.ModBlocks;
-import com.google.common.collect.ImmutableList;
-import com.mojang.datafixers.util.Pair;
-import net.minecraft.data.DataGenerator;
+import net.minecraft.data.PackOutput;
 import net.minecraft.data.loot.LootTableProvider;
 import net.minecraft.resources.ResourceLocation;
+import net.minecraft.world.flag.FeatureFlags;
 import net.minecraft.world.level.block.Block;
 import net.minecraft.world.level.storage.loot.LootTable;
 import net.minecraft.world.level.storage.loot.ValidationContext;
-import net.minecraft.world.level.storage.loot.parameters.LootContextParamSet;
 import net.minecraft.world.level.storage.loot.parameters.LootContextParamSets;
 
 import java.util.List;
 import java.util.Map;
-import java.util.function.BiConsumer;
-import java.util.function.Consumer;
+import java.util.Set;
 import java.util.function.Supplier;
 import java.util.stream.Collectors;
 
 public class UDLootTables extends LootTableProvider {
 
-    public UDLootTables(DataGenerator generator) {
-        super(generator);
-    }
-
-    @Override
-    public String getName() {
-        return "Ornamental: Unusually Decorative Loot Tables";
-    }
-
-    @Override
-    protected List<Pair<Supplier<Consumer<BiConsumer<ResourceLocation, LootTable.Builder>>>, LootContextParamSet>> getTables() {
-        return ImmutableList.of(Pair.of(UDLootTables.BlockTables::new, LootContextParamSets.BLOCK));
+    public UDLootTables(PackOutput output) {
+        super(output, Set.of(), List.of(new SubProviderEntry(BlockTables::new, LootContextParamSets.BLOCK)));
     }
 
     @Override
@@ -43,8 +30,12 @@ public class UDLootTables extends LootTableProvider {
 
     public static class BlockTables extends OrnamentLootTableProvider {
 
+        protected BlockTables() {
+            super(Set.of(), FeatureFlags.REGISTRY.allFlags());
+        }
+
         @Override
-        protected void addTables() {
+        protected void generate() {
             dropSelf(ModBlocks.oak_log_stairs);
             dropSelf(ModBlocks.spruce_log_stairs);
             dropSelf(ModBlocks.birch_log_stairs);
